# AdventOfCode

./: .gitignore  README.md
2015/aoc_env/: pyvenv.cfg
2015/day1/: Day_1.py
2015/day10/: Day_10.py
2015/day11/: day_11.py
2015/day2/: Day_2.py
2015/day3/: Day_3.py
2015/day4/: Day_4.py
2015/day5/: Day_5.py
2015/day6/: Day_6.py
2015/day8/: Day_8.py
2015/day9/: Day_9.py
2016/day1/: Day_1.py
2016/day2/: Day_2.py
2016/day3/: Day_3.py
2016/day4/: Day_4.py
2017/day1/: Day_1.py
2017/day2/: Day_2.py
2017/day3/: Day_3.py
2017/day4/: Day_4.py
2017/day5/: Day_5.py
2017/day6/: Day_6.py
2019/day1/: Day_1.py
2019/day2/: Day_2.py
2019/day3/: Day_3.py
2019/day4/: Day_4.py
2019/day5/: Day_5.py
2020/day1/: Day_1.py
2020/day2/: Day_2.py
2021/Day1/: day_1  day_1.cpp  day_1_part2  day_1_part2.cpp
2021/Day2/: day2  day2.cpp
2023/: AdventOfCode2023.pro  Day3.cpp  Day4.cpp  Day5.cpp  Day_7_Camel_Cards.cpp  adventofcode2023.cpp  adventofcode2023.h  camel_cards.cpp  camel_cards.h  cube_conundrum.cpp  cube_conundrum.h  fertilizer.cpp  fertilizer.h  gear_ratios.cpp  gear_ratios.h  main.cpp  scratchcards.cpp  scratchcards.h  trebuchet.cpp  trebuchet.h  wait_for_it.cpp  wait_for_it.h
2024/: CMakeLists.txt  template.txt
2025/: CMakeLists.txt
2025/include/: day.h  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  dayFactory.h  utils.h
2025/inputs/: inputFiles.h
2025/src/: main.cpp
2025/src/days/: day.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  dayFactory.cpp
2025/src/utils/: utils.cpp
(+39 files in other folders)
